Add Nametags, Add Selection Interface

--- a/server.cfg
+++ b/server.cfg
@@ -13,5 +13,6 @@ debug: true, # set to true during development
 modules: ["node-module"],
 resources: [
   "fuelrats",
-  "altv-discord-auth"
+  "altv-discord-auth",
+  "altv-os-nametags"
 ],
