--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "resources/altv-discord-auth"]
 	path = resources/altv-discord-auth
 	url = https://github.com/Stuyk/altv-discord-auth
+[submodule "resources/altv-os-nametags"]
+	path = resources/altv-os-nametags
+	url = https://github.com/Stuyk/altv-os-nametags
