--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "author": "Stuyk",
     "dependencies": {
+        "@altv/types-natives": "^1.1.0",
         "axios": "^0.19.2",
         "chalk": "^4.0.0",
         "cors": "^2.8.5",
