--- a/server.cfg
+++ b/server.cfg
@@ -14,5 +14,6 @@ modules: ["node-module"],
 resources: [
   "fuelrats",
   "altv-discord-auth",
-  "altv-os-nametags"
+  "altv-os-nametags",
+  "altv-os-missing-interiors"
 ],
