--- a/server.cfg
+++ b/server.cfg
@@ -13,6 +13,8 @@ debug: true, # set to true during development
 modules: ["js-module"],
 resources: [
   "fuelrats",
+  "fuelrats-airport",
+  "fuelrats-innercity",
   "altv-discord-auth",
   "altv-os-nametags",
   "altv-os-missing-interiors"
